<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardUseCompatPadding="true"
    card_view:cardCornerRadius="0dp"
    card_view:cardElevation="5dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@color/colorPrimary"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:layout_gravity="center_vertical"
            android:gravity="bottom">
        </TextView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/sku_title"
                android:textColor="@android:color/black"
                android:gravity="start"
                android:layout_gravity="center_vertical">
            </TextView>

            <TextView
                android:id="@+id/sku"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:textSize="12sp"
                android:textColor="@color/gray"
                android:gravity="start"
                android:layout_gravity="center_vertical">
            </TextView>

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/price_title"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:layout_gravity="center_vertical">
            </TextView>

            <TextView
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="12sp"
                android:textColor="@color/gray"
                android:gravity="start"
                android:layout_gravity="center_vertical">
            </TextView>

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/stock_title"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:layout_gravity="center_vertical">
            </TextView>

            <TextView
                android:id="@+id/stock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="12sp"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:gravity="end"
                android:layout_gravity="center_vertical">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image"
                android:src="@drawable/cloud"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/background_gray">
            </ImageView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:textSize="12sp"
                    android:textColor="@android:color/black"
                    android:layout_gravity="top"
                    android:text="@string/description_product">
                </TextView>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textSize="12sp"
                    android:textColor="@color/gray"
                    android:layout_gravity="center_vertical">
                </TextView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>