<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.bennsandoval.com.woodmin.activities.OrderAddProduct">

    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="5dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_card_white"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@color/colorPrimary">

                <TextView
                    android:id="@+id/sku"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:gravity="bottom"
                    android:layout_gravity="bottom"/>

                <TextView
                    android:id="@+id/price"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:textColor="@android:color/white"
                    android:gravity="end|bottom"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingRight="10dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:src="@drawable/shopping_info"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center_vertical">
                </TextView>

            </LinearLayout>

            <ImageView
                android:id="@+id/item_image_card"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginEnd="40dp"
                android:background="@color/background_gray"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:id="@+id/controls"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingRight="20dp"
                android:paddingEnd="20dp">

                <Button
                    android:id="@+id/less"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remove"
                    android:textSize="12sp"
                    android:colorControlHighlight="@color/red"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/quantity"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:inputType="number"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="bottom"
                    android:gravity="center"/>

                <Button
                    android:id="@+id/more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textSize="12sp"
                    android:colorControlHighlight="@color/colorPrimary"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:gravity="center"/>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/gray_divider"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:orientation="horizontal"
                android:gravity="end">

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="@color/holo_blue_dark"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

                <Button
                    android:id="@+id/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_cart"
                    android:textColor="@color/holo_blue_dark"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
