<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.bennsandoval.com.woodmin.activities.OrderLinesShip"
    tools:showIn="@layout/activity_order_lines_ship">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardUseCompatPadding="true"
            card_view:cardCornerRadius="0dp"
            card_view:cardElevation="5dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/header"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:orientation="horizontal"
                    android:background="@color/colorPrimary">

                    <TextView
                        android:id="@+id/sku"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:textColor="@android:color/white"
                        android:layout_gravity="bottom"/>

                    <TextView
                        android:id="@+id/quantity"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:layout_gravity="bottom"
                        android:gravity="end"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp"
                    android:paddingTop="10dp">

                    <ImageView
                        android:src="@drawable/shopping_info"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center_vertical"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="40dp"
                    android:paddingStart="40dp">

                    <TextView
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/gray"
                        android:text="@string/order_title"
                        android:gravity="start"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:id="@+id/order"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"
                        android:gravity="start"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/gray"
                        android:text="@string/stock_title"
                        android:gravity="center"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:id="@+id/stock"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center_vertical"
                        android:gravity="start"/>

                    <TextView
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/gray"
                        android:text="@string/price_title"
                        android:gravity="center"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"
                        android:gravity="start"
                        android:layout_gravity="center_vertical"/>

                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/gray_divider"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="14sp"
                    android:text="@string/scan_instructions"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/gray"/>

                <EditText
                    android:id="@+id/scan"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardUseCompatPadding="true"
            card_view:cardCornerRadius="0dp"
            card_view:cardElevation="5dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingRight="20dp"
                android:paddingEnd="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">

                    <ImageView
                        android:src="@drawable/billing_info"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:textSize="14sp"
                        android:textColor="@android:color/black"
                        android:text="@string/description_product"
                        android:layout_gravity="center_vertical">
                    </TextView>

                </LinearLayout>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingLeft="40dp"
                    android:paddingStart="40dp"
                    android:textSize="12sp"
                    android:textColor="@color/gray"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
